--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 order-md-1">
-          <form class="needs-validation" novalidate="">
+          <form class="needs-validation p-2" novalidate="">
             <button type="submit" class="btn btn-lg btn-warning" contenteditable="true">Скачать</button><button type="submit" class="float-right btn btn-lg btn-danger">Изменить теги</button></form>
           <div class="row">
             <div class="col-md-12"><a class="btn btn-block btn-lg btn-success" href="#">Основные сведения</a><a class="btn btn-primary btn-block btn-lg text-center" href="#">Структура и органы управления образовательной организацией</a><a class="btn btn-primary btn-block btn-lg" href="#">Документы</a><a class="btn btn-block btn-lg btn-success" href="#">Образование</a><a class="btn btn-block btn-lg btn-success" href="#">Образовательные стандарты</a><a class="btn btn-primary btn-block btn-lg" href="#">Руководство. Педагогический (научно-педагогический) состав</a><a class="btn btn-primary btn-block btn-lg" href="#">Материально-техническое обеспечение и оснащённость образовательного процесса</a><a class="btn btn-primary btn-block btn-lg" href="#">Стипендии и иные виды материальной поддержки</a><a class="btn btn-primary btn-block btn-lg" href="#">Платные образовательные услуги</a><a class="btn btn-primary btn-block btn-lg" href="#">Финансово-хозяйственная деятельность</a><a class="btn btn-primary btn-block btn-lg" href="#">Вакантные места для приема (перевода)</a></div>
