--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- PAGE settings -->
-  <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Checkout</title>
-  <meta name="description" content="Wireframe design of a checkout form by Pingendo">
-  <meta name="keywords" content="Pingendo bootstrap example template wireframe checkout form">
+  <link rel="icon" href="http://www.polytech21.ru/templates/rt_refraction/favicon.ico">
+  <title>Генерация страниц</title>
+  <meta name="description" content="Генерация страниц">
+  <meta name="keywords" content="edutags">
   <meta name="author" content="Pingendo">
   <!-- CSS dependencies -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="row">
         <div class="text-center col-md-7 mx-auto bg-dark"> <img src="http://www.polytech21.ru/templates/rt_refraction/images/main/light/logo.png" class="p-3">
-          <h2 class="pb-2">Генерация тегов</h2>
+          <h2 class="pb-2">Генерация страниц</h2>
         </div>
       </div>
     </div>
