--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                                 <input type="checkbox" class="founder row_checker" name="founder_1" value="1">
                               </td>
                               <td>
-                                <textarea name="founders[0][name_uchred]" rows="5" class="name_uchred form-control"></textarea>
+                                <textarea name="founders[0][name_uchred]" rows="5" class="name_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
-                                <textarea name="founders[0][fullname_uchred]" rows="5" class="fullname_uchred form-control"></textarea>
+                                <textarea name="founders[0][fullname_uchred]" rows="5" class="fullname_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
@@ -77,11 +77,11 @@
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
-                                <textarea name="founders[0][tel_uchred]" rows="5" class="tel_uchred form-control"></textarea>
+                                <textarea name="founders[0][tel_uchred]" rows="5" class="tel_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
-                                <textarea name="founders[0][mail_uchred]" rows="5" class="mail_uchred form-control"></textarea>
+                                <textarea name="founders[0][mail_uchred]" rows="5" class="mail_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
