--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <form class="needs-validation p-2" novalidate="">
             <button type="submit" class="btn btn-lg btn-warning" contenteditable="true">Скачать</button><button type="submit" class="float-right btn btn-lg btn-danger">Изменить теги</button></form>
           <div class="row">
-            <div class="col-md-12"><a class="btn btn-block btn-lg btn-success" href="#">Основные сведения</a>
+            <div class="col-md-14"><a class="btn btn-block btn-lg btn-success" href="#">Основные сведения</a>
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 mb-3">
                   <div class="card">
                     <div class="card-header"> Редактирование страницы</div>
                     <div class="card-body">
@@ -46,7 +46,7 @@
                         <div class="form-group"> <label contenteditable="true">Факсы *</label> <textarea class="form-control"></textarea></div>
                         <div class="form-group"> <label>Адреса электронной почты *</label> <textarea class="form-control"></textarea></div>
                       </form>
-                      <h3 class="">Поля, отмеченные *, являются обязательными для заполнения </h3>
+                      <h4 class="">Поля, отмеченные *, являются обязательными для заполнения </h4><a class="btn btn-outline-dark btn-block btn-lg mb-3" href="#"><i class="fa fa-plus fa-fw"></i><b class="">Учредители образовательной организации</b></a>
                       <!-- Cut -->
                       <div class="form_row col-md-12">
                         <table class="table" id="founders">
@@ -100,9 +100,110 @@
                       </div>
                       <!--Cut-->
                     </div>
-                  </div>
+                  </div><a class="btn btn-block btn-lg btn-warning" href="#"><i class="fa fa-fw fa-check"></i><b>Сохранить</b></a>
                 </div>
-              </div><a class="btn btn-primary btn-block btn-lg text-center" href="#">Структура и органы управления образовательной организацией</a><a class="btn btn-primary btn-block btn-lg" href="#">Документы</a><a class="btn btn-block btn-lg btn-success" href="#">Образование</a><a class="btn btn-block btn-lg btn-success" href="#">Образовательные стандарты</a><a class="btn btn-primary btn-block btn-lg" href="#">Руководство. Педагогический (научно-педагогический) состав</a><a class="btn btn-primary btn-block btn-lg" href="#">Материально-техническое обеспечение и оснащённость образовательного процесса</a><a class="btn btn-primary btn-block btn-lg" href="#">Стипендии и иные виды материальной поддержки</a><a class="btn btn-primary btn-block btn-lg" href="#">Платные образовательные услуги</a><a class="btn btn-primary btn-block btn-lg" href="#">Финансово-хозяйственная деятельность</a><a class="btn btn-primary btn-block btn-lg" href="#">Вакантные места для приема (перевода)</a>
+              </div><a class="btn btn-primary btn-block btn-lg text-center" href="#"><i class="fa fa-fw fa-plus"></i>Структура и органы управления образовательной организацией</a>
+              <div class="card mb-3">
+                <div class="card-header">Добавление страницы</div>
+                <div class="card-body">
+                  <form id="data_form" class="AVAST_PAM_nonloginform">
+                    <input name="base[draft]" type="hidden" id="draft" value="">
+                    <h4>Органы управления образовательной организации</h4>
+                    <div class="form_row col-md-12">
+                      <table class="table" id="controls">
+                        <tbody>
+                          <tr>
+                            <th>&nbsp;&nbsp;</th>
+                            <th>Наименование органа управления (*)</th>
+                            <th>ФИО руководителя (*)</th>
+                            <th>Положение об органе управления</th>
+                          </tr>
+                          <tr id="control_1">
+                            <td>
+                              <input type="checkbox" class="control row_checker" name="control_1" value="1">
+                            </td>
+                            <td>
+                              <textarea name="controls[0][name]" rows="5" class="name form-control"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                            <td>
+                              <textarea name="controls[0][fio]" rows="5" class="fio form-control"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                            <td>
+                              <textarea name="controls[0][division_clause_doc_link]" rows="5" class="division_clause_doc_link form-control" placeholder="Ссылка на копию (при наличии положения)"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <div class="btn-group">
+                        <button type="button" class="btn add add_control btn-warning mr-1"><i class="fa fa-fw fa-plus"></i><span class="glyphicon glyphicon-plus"></span> Добавить</button>
+                        <button type="button" class="btn btn-danger remove mr-1"><i class="fa fa-fw fa-minus"></i><span class="glyphicon glyphicon-minus"></span> Удалить</button>
+                        <button type="button" class="btn btn-danger remove_selected_controls"><i class="fa fa-fw fa-minus-square"></i><span class="glyphicon glyphicon-remove"></span> Удалить выделенные</button>
+                      </div>
+                      <hr>
+                    </div>
+                    <h4>Структурные подразделения образовательной организации</h4>
+                    <div class="form_row col-md-12">
+                      <table class="table" id="departments">
+                        <tbody>
+                          <tr>
+                            <th>&nbsp;&nbsp;</th>
+                            <th>Наименование структурного подразделения (*)</th>
+                            <th>ФИО руководителя структурного подразделения (*)</th>
+                            <th>Должность руководителя структурного подразделения (*)</th>
+                            <th>Адрес местонахождения структурного подразделения (*)</th>
+                            <th>Адрес официального сайта структурного подразделения (*)</th>
+                            <th>Адреса электронной почты структурного подразделения (*)</th>
+                            <th>Положение о структурном подразделении</th>
+                          </tr>
+                          <tr id="department_1">
+                            <td>
+                              <input type="checkbox" class="department row_checker" name="department_1" value="1">
+                            </td>
+                            <td>
+                              <textarea name="departments[0][name]" rows="5" class="name form-control"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                            <td>
+                              <textarea name="departments[0][fio]" rows="5" class="fio form-control"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                            <td>
+                              <textarea name="departments[0][post]" rows="5" class="post form-control"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                            <td>
+                              <textarea name="departments[0][address_str]" rows="5" class="address_str form-control"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                            <td>
+                              <textarea name="departments[0][site]" rows="5" class="site form-control"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                            <td>
+                              <textarea name="departments[0][email]" rows="5" class="email form-control"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                            <td>
+                              <textarea name="departments[0][division_clause_doc_link]" rows="5" class="division_clause_doc_link form-control" placeholder="Ссылка на копию (при наличии положения)"></textarea>
+                              <div class="error text-danger"></div>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <div class="btn-group">
+                        <button type="button" class="btn add add_department btn-warning mr-1" style=""><i class="fa fa-fw fa-plus"></i><span class="glyphicon glyphicon-plus"></span> Добавить</button>
+                        <button type="button" class="btn btn-danger remove mr-1"><i class="fa fa-fw fa-minus"></i><span class="glyphicon glyphicon-minus"></span> Удалить</button>
+                        <button type="button" class="btn btn-danger remove_selected_departments"><i class="fa fa-fw fa-minus-square"></i><span class="glyphicon glyphicon-remove"></span> Удалить выделенные</button>
+                      </div>
+                      <hr>
+                    </div>
+                    <h4 class="text-primary"> Поля, отмеченные *, являются обязательными для заполнения </h4>
+                  </form>
+                </div><a class="btn btn-block btn-lg btn-warning" href="#"><i class="fa fa-fw fa-check"></i><b>Сохранить</b></a>
+              </div><a class="btn btn-primary btn-block btn-lg" href="#">Документы</a><a class="btn btn-block btn-lg btn-success" href="#">Образование</a><a class="btn btn-block btn-lg btn-success" href="#">Образовательные стандарты</a><a class="btn btn-primary btn-block btn-lg" href="#">Руководство. Педагогический (научно-педагогический) состав</a><a class="btn btn-primary btn-block btn-lg" href="#">Материально-техническое обеспечение и оснащённость образовательного процесса</a><a class="btn btn-primary btn-block btn-lg" href="#">Стипендии и иные виды материальной поддержки</a><a class="btn btn-primary btn-block btn-lg" href="#">Платные образовательные услуги</a><a class="btn btn-primary btn-block btn-lg" href="#">Финансово-хозяйственная деятельность</a><a class="btn btn-primary btn-block btn-lg" href="#">Вакантные места для приема (перевода)</a>
             </div>
           </div>
         </div>
