--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="row">
             <div class="col-md-14" style=""><a class="btn btn-block btn-lg btn-success" href="#">Основные сведения</a>
               <div class="row">
-                <div class="col-md-12 mb-3">
+                <div class="col-md-12 mb-3" id="svedenia">
                   <div class="card">
                     <div class="card-header"> Редактирование страницы</div>
                     <div class="card-body">
@@ -103,7 +103,7 @@
                   </div><a class="btn btn-block btn-lg btn-warning" href="#"><i class="fa fa-fw fa-check"></i><b>Сохранить</b></a>
                 </div>
               </div><a class="btn btn-primary btn-block btn-lg text-center" href="#"><i class="fa fa-fw fa-plus"></i>Структура и органы управления образовательной организацией</a>
-              <div class="card mb-3">
+              <div class="card mb-3" id="struktura">
                 <div class="card-header">Добавление страницы</div>
                 <div class="card-body">
                   <form id="data_form" class="AVAST_PAM_nonloginform">
@@ -204,7 +204,7 @@
                   </form>
                 </div><a class="btn btn-block btn-lg btn-warning" href="#"><i class="fa fa-fw fa-check"></i><b>Сохранить</b></a>
               </div><a class="btn btn-primary btn-block btn-lg" href="#">Документы</a>
-              <div class="card mb-3">
+              <div class="card mb-3" id="documenty">
                 <div class="card-header"> Добавление страницы </div>
                 <div class="card-body">
                   <form id="data_form" class="AVAST_PAM_nonloginform">
@@ -790,6 +790,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="assets/js/validation.js"></script>
+  <script>
+    $("#svedenia").addClass("d-none");
+    $("#struktura").addClass("d-none");
+    $("#documenty").addClass("d-none");
+  </script>
   <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
