--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <form class="needs-validation p-2" novalidate="">
             <button type="submit" class="btn btn-lg btn-warning" contenteditable="true">Скачать</button><button type="submit" class="float-right btn btn-lg btn-danger">Изменить теги</button></form>
           <div class="row">
-            <div class="col-md-14" style=""><a class="btn btn-block btn-lg btn-success" href="#">Основные сведения</a>
+            <div class="col-md-14" style=""><a class="btn btn-block btn-lg btn-success mb-2" href="#">Основные сведения</a>
               <div class="row">
                 <div class="col-md-12 mb-3" id="svedenia">
                   <div class="card">
@@ -102,7 +102,7 @@
                     </div>
                   </div><a class="btn btn-block btn-lg btn-warning" href="#"><i class="fa fa-fw fa-check"></i><b>Сохранить</b></a>
                 </div>
-              </div><a class="btn btn-primary btn-block btn-lg text-center" href="#"><i class="fa fa-fw fa-plus"></i>Структура и органы управления образовательной организацией</a>
+              </div><a class="btn btn-primary btn-block btn-lg text-center mb-2" href="#"><i class="fa fa-fw fa-plus"></i>Структура и органы управления образовательной организацией</a>
               <div class="card mb-3" id="struktura">
                 <div class="card-header">Добавление страницы</div>
                 <div class="card-body">
@@ -203,7 +203,7 @@
                     <h4 class="text-primary"> Поля, отмеченные *, являются обязательными для заполнения </h4>
                   </form>
                 </div><a class="btn btn-block btn-lg btn-warning" href="#"><i class="fa fa-fw fa-check"></i><b>Сохранить</b></a>
-              </div><a class="btn btn-primary btn-block btn-lg" href="#">Документы</a>
+              </div><a class="btn btn-primary btn-block btn-lg mb-2" href="#">Документы</a>
               <div class="card mb-3" id="documenty">
                 <div class="card-header"> Добавление страницы </div>
                 <div class="card-body">
