--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <form class="needs-validation p-2" novalidate="">
             <button type="submit" class="btn btn-lg btn-warning" contenteditable="true">Скачать</button><button type="submit" class="float-right btn btn-lg btn-danger">Изменить теги</button></form>
           <div class="row">
-            <div class="col-md-14" style="" id="dok-btn"><a class="btn btn-block btn-lg btn-success mb-2" href="#" id="sveden-btn">Основные сведения</a>
+            <div class="col-md-14 col-md-12" style="" id="dok-btn"><a class="btn btn-block btn-lg btn-success mb-2" href="#" id="sveden-btn">Основные сведения</a>
               <div class="row">
                 <div class="col-md-30 mb-3 col-md-12" id="svedenia">
                   <div class="card w-100">
