--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-md-12 order-md-1">
           <form class="needs-validation p-2" novalidate="">
-            <button type="submit" class="btn btn-lg btn-warning" contenteditable="true">Скачать</button><button type="submit" class="float-right btn btn-lg btn-danger">Изменить теги</button></form>
+            <button type="submit" class="btn btn-lg btn-warning d-none" contenteditable="true">Скачать</button><button type="submit" class="float-right btn btn-lg btn-danger d-none">Изменить теги</button></form>
           <div class="row">
             <div class="col-md-14 col-md-12" style="" id="dok-btn"><a class="btn btn-block btn-lg btn-success mb-2" href="#" id="sveden-btn">Основные сведения</a>
               <div class="row">
@@ -46,7 +46,7 @@
                         <div class="form-group"> <label contenteditable="true">Факсы *</label> <textarea class="form-control"></textarea></div>
                         <div class="form-group"> <label>Адреса электронной почты *</label> <textarea class="form-control"></textarea></div>
                       </form>
-                      <h4 class="">Поля, отмеченные *, являются обязательными для заполнения </h4><a class="btn btn-outline-dark btn-block btn-lg mb-3" href="#"><i class="fa fa-plus fa-fw"></i><b class="">Учредители образовательной организации</b></a>
+                      <h4 class="">Поля, отмеченные *, являются обязательными для заполнения </h4><a class="btn btn-outline-dark btn-block btn-lg mb-3 d-none" href="#"><i class="fa fa-plus fa-fw"></i><b class="">Учредители образовательной организации</b></a>
                       <!-- Cut -->
                       <div class="form_row col-md-12">
                         <table class="table" id="founders">
