--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                     <div class="card-header"> Редактирование страницы</div>
                     <div class="card-body">
                       <form class="">
-                        <div class="form-group"> <label>Дата создания образовательной организации *</label> <input type="text" class="form-control"> </div>
-                        <div class="form-group"> <label>Адрес местонахождения образовательной организации *</label> <input type="text" class="form-control"> </div>
-                        <div class="form-group"> <label>Режим, график работы *</label> <textarea class="form-control"></textarea></div>
-                        <div class="form-group"> <label contenteditable="true">Контактные телефоны *</label> <textarea class="form-control"></textarea></div>
-                        <div class="form-group"> <label contenteditable="true">Факсы *</label> <textarea class="form-control"></textarea></div>
-                        <div class="form-group"> <label>Адреса электронной почты *</label> <textarea class="form-control"></textarea></div>
+                        <div class="form-group"> <label>Дата создания образовательной организации *</label> <input type="text" class="form-control" id="obr-date"> </div>
+                        <div class="form-group"> <label>Адрес местонахождения образовательной организации *</label> <input type="text" class="form-control" id="obr-adr"> </div>
+                        <div class="form-group"> <label>Режим, график работы *</label> <textarea class="form-control" id="obr-time"></textarea></div>
+                        <div class="form-group"> <label contenteditable="true">Контактные телефоны *</label> <textarea class="form-control" id="obr-phones"></textarea></div>
+                        <div class="form-group"> <label contenteditable="true">Факсы *</label> <textarea class="form-control" id="obr-fax"></textarea></div>
+                        <div class="form-group"> <label>Адреса электронной почты *</label> <textarea class="form-control" id="obr-email"></textarea></div>
                       </form>
                       <h4 class="">Поля, отмеченные *, являются обязательными для заполнения </h4><a class="btn btn-outline-dark btn-block btn-lg mb-3 d-none" href="#"><i class="fa fa-plus fa-fw"></i><b class="">Учредители образовательной организации</b></a>
                       <!-- Cut -->
@@ -62,45 +62,45 @@
                             </tr>
                             <tr id="founder_1">
                               <td>
-                                <input type="checkbox" class="founder row_checker" name="founder_1" value="1">
+                                <input type="checkbox" class="founder row_checker" name="founder_1" value="1" checked="checked" id="obr-uch-check">
                               </td>
                               <td>
-                                <textarea name="founders[0][name_uchred]" rows="5" class="name_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
+                                <textarea name="founders[0][name_uchred]" rows="5" class="name_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц" id="obr-uch-name"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
-                                <textarea name="founders[0][fullname_uchred]" rows="5" class="fullname_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
+                                <textarea name="founders[0][fullname_uchred]" rows="5" class="fullname_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц" id="obr-uch-fullname"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
-                                <textarea name="founders[0][address_uchred]" rows="5" class="address_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
+                                <textarea name="founders[0][address_uchred]" rows="5" class="address_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц" id="obr-uch-adr"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
-                                <textarea name="founders[0][tel_uchred]" rows="5" class="tel_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
+                                <textarea name="founders[0][tel_uchred]" rows="5" class="tel_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц" id="obr-uch-phones"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
-                                <textarea name="founders[0][mail_uchred]" rows="5" class="mail_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
+                                <textarea name="founders[0][mail_uchred]" rows="5" class="mail_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц" id="obr-uch-email"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                               <td>
-                                <textarea name="founders[0][website_uchred]" rows="5" class="website_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц"></textarea>
+                                <textarea name="founders[0][website_uchred]" rows="5" class="website_uchred form-control" placeholder="Не заполняется для учредителей – физических лиц" id="obr-uch-site"></textarea>
                                 <div class="error text-danger"></div>
                               </td>
                             </tr>
                           </tbody>
                         </table>
-                        <div class="btn-group">
+                        <!--<div class="btn-group" >
                           <button type="button" class="btn add add_founder btn-warning mr-1"><i class="fa fa-fw fa-plus"></i><span class="glyphicon glyphicon-plus"></span> Добавить</button>
                           <button type="button" class="btn btn-danger remove mr-1"><i class="fa fa-fw fa-minus"></i> Удалить</button>
                           <button type="button" class="btn btn-danger remove_selected_founders"><i class="fa fa-fw fa-minus-square"></i><span class="glyphicon glyphicon-remove"></span> Удалить выделенные</button>
-                        </div>
+                        </div> -->
                         <hr>
                       </div>
                       <!--Cut-->
                     </div>
-                  </div><a class="btn btn-block btn-lg btn-warning" href="#"><i class="fa fa-fw fa-check"></i><b>Сохранить</b></a>
+                  </div><a class="btn btn-block btn-lg btn-warning" href="#" id="save-btn"><i class="fa fa-fw fa-check"></i><b>Сохранить</b></a>
                 </div>
               </div>
               <!--1-->
