add id to form1

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <div class="card w-100">
                     <div class="card-header"> Редактирование страницы</div>
                     <div class="card-body">
-                      <form class="">
+                      <form class="" id="osn-sveden">
                         <div class="form-group"> <label>Дата создания образовательной организации *</label> <input type="text" class="form-control" id="obr-date"> </div>
                         <div class="form-group"> <label>Адрес местонахождения образовательной организации *</label> <input type="text" class="form-control" id="obr-adr"> </div>
                         <div class="form-group"> <label>Режим, график работы *</label> <textarea class="form-control" id="obr-time"></textarea></div>
