js generate pre-alpha

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                     <div class="card-header"> Редактирование страницы</div>
                     <div class="card-body">
                       <form class="" id="osn-sveden">
-                        <div class="form-group"> <label>Дата создания образовательной организации *</label> <input type="text" class="form-control" id="obr-date"> </div>
-                        <div class="form-group"> <label>Адрес местонахождения образовательной организации *</label> <input type="text" class="form-control" id="obr-adr"> </div>
-                        <div class="form-group"> <label>Режим, график работы *</label> <textarea class="form-control" id="obr-time"></textarea></div>
-                        <div class="form-group"> <label contenteditable="true">Контактные телефоны *</label> <textarea class="form-control" id="obr-phones"></textarea></div>
-                        <div class="form-group"> <label contenteditable="true">Факсы *</label> <textarea class="form-control" id="obr-fax"></textarea></div>
-                        <div class="form-group"> <label>Адреса электронной почты *</label> <textarea class="form-control" id="obr-email"></textarea></div>
+                        <div class="form-group"> <label>Дата создания образовательной организации *</label> <input type="text" class="form-control" name="obr_dat"> </div>
+                        <div class="form-group"> <label>Адрес местонахождения образовательной организации *</label> <input type="text" class="form-control" name="obr_adr"> </div>
+                        <div class="form-group"> <label>Режим, график работы *</label> <textarea class="form-control" name="obr_time"></textarea></div>
+                        <div class="form-group"> <label contenteditable="true">Контактные телефоны *</label> <textarea class="form-control" name="obr_phones"></textarea></div>
+                        <div class="form-group"> <label contenteditable="true">Факсы *</label> <textarea class="form-control" name="obr_fax"></textarea></div>
+                        <div class="form-group"> <label>Адреса электронной почты *</label> <textarea class="form-control" name="obr_email"></textarea></div>
                       </form>
                       <h4 class="">Поля, отмеченные *, являются обязательными для заполнения </h4><a class="btn btn-outline-dark btn-block btn-lg mb-3 d-none" href="#"><i class="fa fa-plus fa-fw"></i><b class="">Учредители образовательной организации</b></a>
                       <!-- Cut -->
@@ -1627,10 +1627,9 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"crossorigin="anonymous"></script>
   <script async="" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="assets/js/validation.js"></script>
   <script src="assets/js/main-saver.js"></script>
   <script async="" src="https://cdn.rawgit.com/eligrey/Blob.js/0cef2746414269b16834878a8abc52eb9d53e6bd/Blob.js"></script>
   <script async="" src="https://cdn.rawgit.com/eligrey/FileSaver.js/5ed507ef8aa53d8ecfea96d96bc7214cd2476fd2/FileSaver.min.js"></script>
